builder/tests/08-unrecognized-attribute.stderr
error: invalid builder attribute
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
